Mudando a política de remorção de elementos do buffer.