@@ -1,6 +1,7 @@
 package br.edu.ufcg.ic.akka.java;
 
 import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.List;
 
 import javax.swing.event.ChangeEvent;
@@ -16,7 +17,7 @@ import br.edu.ufcg.ic.swing.ListenerBuffer;
 
 public class Buffer extends UntypedActor{
 	private LoggingAdapter log;
-	private List<Integer> numeros;
+	private LinkedList<Integer> numeros;
 	private static Integer tamanho;
 	private ActorRef produtor;
 	private ActorRef consumidor;
@@ -69,27 +70,12 @@ public class Buffer extends UntypedActor{
 	
 	public Buffer(int tamanho, ListenerBuffer listenerBuffer) {
 		this.log = Logging.getLogger(getContext().system(), this);
-    	this.numeros = new ArrayList<>();
+    	this.numeros = new LinkedList<>();
     	Buffer.tamanho = tamanho;
     	if(listenerBuffer != null){
 			listener = listenerBuffer;
 		}
     }
-	
-	/*private void addChangeListener(ListenerBuffer listenerBuffer){
-		if(listenerBuffer != null){
-			if(!listeners.contains(listenerBuffer)){
-				listeners.add(listenerBuffer);
-			}
-		}
-	}*/
-	
-	/*private void fireChangeEventPerformed() {
-		ChangeEvent changeEvent = new ChangeEvent(numeros);
-		for (ListenerBuffer listener : listeners) {
-			listener.stateChanged(changeEvent);
-		}
-	}*/
 	
 	private void fireChangeEventPerformed() {
 		ChangeEvent changeEvent = new ChangeEvent(numeros);
@@ -110,11 +96,10 @@ public class Buffer extends UntypedActor{
         } else if (message instanceof Output){
         	consumidor = getSender();
             if(numeros.size() > 0) {
-            	int aux = numeros.remove(numeros.size() - 1);
+            	int aux = numeros.removeFirst();
             	log.info("Removido int : " + aux + " from : " + getSender());
             	consumidor.tell(new Buffer.Input(aux), getSelf());
             	fireChangeEventPerformed();
-            	//produtor.tell(new Produtor.Produzir(), getSelf());
             } else {
             	consumidor.tell(new Buffer.Empty(), getSelf());
             }
